<resources>
    <string name="app_name">Hungry English</string>
    <string name="title_activity_register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="msg">Create an Account</string>
    <string name="user_name">Username </string>
    <string name="user_name_email">Username/Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign up</string>
    <string name="alreadyhaveaccount">Already have an account?</string>
    <string name="doyouhaveaccount">Do not have an account?</string>
    <string name="login">Login</string>
    <string name="msg_login">Please login into your account.</string>
    <string name="openaccount">Create An Account</string>
    <string name="parent_msg">Student / Parent Information</string>
    <string name="age_student">Age of Student</string>
    <string name="year_of_english_exp">Years of English Experence</string>
    <string name="nearest_railway_station">Nearest Railway Station</string>
    <string name="address">Address</string>
    <string name="file_downloaded">File Downloaded Sucessfully.</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="submit">Submit</string>
    <string name="submit_en">Submit</string>
    <string name="email_validation">Enter Valid Email</string>
    <string name="password_validation">Password Must be grater then 6 charcters</string>
    <string name="no_internet">Please check your Internet Connection</string>
    <string name="loginfail">Please enter a valid Email Password</string>
    <string name="user_name_validation">Username Must be greater than 4 charcters</string>
    <string name="full_name_validation">Enter Full Name</string>
    <string name="internet_connection_error" translatable="false">Hungry English requires an internet connection.Make sure Wi-Fi or mobile networks are turned on, then try again.</string>
    <string name="wechat">WeChat ID</string>
    <string name="applyasteacher">Apply as Teacher</string>
    <string name="teacher_profile">Teacher Profile</string>
    <string name="upload_id">Upload ID Proof</string>
    <string name="current_workplace">Current Workplace</string>
    <string name="avaibility">Avaibility</string>
    <string name="upload_cv">Upload CV</string>
    <string name="parent_profile">Parent Profile</string>
    <string name="upload_audio">Upload Audio</string>
    <string name="location">Address ( Location )</string>
    <string name="sucess_external_storage_msg" translatable="false">Hungry English will use your storage.</string>
    <string name="error_permission_msg" translatable="false">Hungry English can misbehave.</string>
    <string name="logout">Logout</string>
    <string name="teacher_name">Name :</string>
    <string name="teacher_email">Email :</string>
    <string name="teacher_mobile_no">wechat id :</string>
    <string name="teacher_avaibility">Avaibility :</string>
    <string name="special_skils">Special Skill/Extra Notes</string>
    <string name="special_skils_label">Special Skill : </string>
    <string name="teacher_avaibility_label">Avaibility : </string>
    <string name="nearest_railway_station_label">Nearest Railway Station : </string>

    <string name="alert_msg">Alert Msg</string>
    <string name="ok" translatable="false">OK</string>
    <string name="choose_file">Choose File</string>
    <string name="internet_error">Internet Connection !</string>
    <string name="accept_invitation">Accept</string>
    <string name="student_list">Student List</string>
    <string name="teacher_list">Teacher List</string>
    <string name="add_image_link" translatable="false"><![CDATA[Add Image / Links]]></string>
    <string name="edit">Edit</string>
    <string name="logout_note">Are you sure you want to logout from Hungry English?</string>

    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="linksforref">Links for reference.</string>
    <string name="mobile_or_wechat">Mobile/Wechat ID</string>
    <string name="report_teacher">View Teacher </string>
    <string name="right_reseved">© André Roberts 2017 - All Rights Reserved</string>
    <string name="forgot_password">Forgot password ? Click here</string>
    <string name="msg_forgot_passowrd">We will send an OTP mail on your registered E-mail address using which you will be able to create a new password.</string>
    <string name="OTP">OTP</string>
    <string name="msg_reset_passoword">Enter a New Password</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="resend_otp">Resend OTP ! Click here</string>
    <string name="msg_otp">Enter Received OTP</string>
    <string name="requst_teacher">Request Teacher</string>
    <string name="inactive_user">Inactive user</string>
    <string name="url">URL</string>
    <string name="report">Report</string>
    <string name="generate_report">Generate Reports</string>
    <string name="loading">Loading..</string>
    <string name="report_sucess">Report created sucessfully.</string>
    <string name="error_something_wrong">Something went wrong.</string>
    <string name="null_value" translatable="false" />
    <string name="try_again">Please Try Again</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="admin_approve_request">Admin will approve your request.</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_mobile_or_wechat">Enter Mobile Number</string>
    <string name="mobile_no_validation">Mobile number must be 9 digit</string>
    <string name="otp_validation">Enter Valid OTP</string>
    <string name="email_send_successfully">Email Send Successfully</string>
    <string name="home_location">Home Location</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="rating_title" translatable="false">Rate and support your teacher</string>
    <string name="student_rating_sucess_msg">Thank you for your valuable feedback!</string>
    <string name="rate">Rate</string>
    <string name="filter">Filter</string>
    <string name="start_time">Select start time</string>
    <string name="end_time">Select end time</string>
    <string name="instruction_days_selection">Please select start time and end time of days</string>
    <string name="err_date_selected">Start time must be before end time</string>
    <string name="hourly_rate">Minimum Hourly Rate</string>
    <string name="map">Map</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="no_data_found">No adminAddInfoDetail found</string>
    <string name="gps_enable">Gps Enable</string>
    <string name="gps_enable_des">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="open_setting">Open setting</string>
    <string name="online_class">Online classes available</string>
    <string name="confirm_req">Are you sure you want send Request ?</string>
    <string name="confirm_inacitve">Are you sure you want inactive this user ?</string>
    <string name="inactive">Inactive</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_link">Add Link</string>
    <string name="add_image">Add Image</string>
    <string name="add_title">Add Title</string>

    <string name="error_data">Enter valid data</string>
    <string name="enter_description">Enter Feedback here...</string>
    <string name="err_feedback">Enter Feedback..</string>
    <string name="change_language">change language</string>
    <string name="teacher_are_below">Teachers are shown below</string>
    <string name="more_teacher">More Teachers</string>
</resources>


