<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rect"
    android:elevation="@dimen/_5sdp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/title_header_tv"
        style="@style/heading_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        tools:text="@string/logout" />


    <TextView
        android:id="@+id/title_tv"
        style="@style/regular_textview"
        tools:text="@string/accept_invitation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_16sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnNegative"
            style="@style/green_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            tools:text="@string/cancel"
            android:gravity="center"
            android:padding="@dimen/_10sdp" />

        <TextView
            android:id="@+id/btnPositive"
            style="@style/green_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="center"
            tools:text="@string/submit_en"
            android:padding="@dimen/_10sdp" />

    </LinearLayout>

</LinearLayout>