<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:gravity="left"
                android:text="@string/parent_msg"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14sdp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <EditText
                    android:id="@+id/fullNameStudentEdit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_edt"
                    android:hint="@string/full_name"
                    android:inputType="text"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <EditText
                    android:id="@+id/usernameStudentEdit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_edt"
                    android:focusable="false"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <EditText
                    android:id="@+id/emailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_edt"
                    android:focusable="false"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp" />
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:checked="true"
                    android:text="@string/radio_male" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:text="@string/radio_female" />

            </RadioGroup>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/wechatEdit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_edt"
                    android:hint="@string/wechat"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ageEdit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_edt"
                    android:hint="@string/age_student"
                    android:inputType="number"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/nearRailwayStationEdit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_edt"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="center_vertical|left"
                android:hint="@string/address"
                android:onClick="pickAddress"
                android:padding="@dimen/_5sdp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />

            <!--<TextView-->
            <!--android:id="@+id/nearRailwayStationTv"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="@dimen/_35sdp"-->
            <!--android:layout_marginLeft="@dimen/_5sdp"-->
            <!--android:layout_marginStart="@dimen/_5sdp"-->
            <!--android:layout_marginTop="@dimen/_5sdp"-->
            <!--android:background="@drawable/bg_edt"-->
            <!--android:hint="@string/location"-->
            <!--android:padding="@dimen/_5sdp"-->
            <!--android:textColor="@android:color/black"-->
            <!--android:textSize="@dimen/_12sdp" />-->

            <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="@dimen/_5sdp">-->

            <!--<EditText-->
            <!--android:id="@+id/avaibilityStudentEdit"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="@dimen/_35sdp"-->
            <!--android:layout_marginLeft="@dimen/_5sdp"-->
            <!--android:layout_marginStart="@dimen/_5sdp"-->
            <!--android:layout_marginTop="@dimen/_5sdp"-->
            <!--android:background="@drawable/bg_edt"-->
            <!--android:hint="@string/avaibility"-->
            <!--android:inputType="text"-->
            <!--android:padding="@dimen/_5sdp"-->
            <!--android:textColor="@android:color/black"-->
            <!--android:textSize="@dimen/_12sdp" />-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <TextView
                android:id="@+id/avaibilityStudentEdit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_edt"
                android:hint="@string/avaibility"
                android:inputType="text"
                android:onClick="onAvailablity"
                android:padding="@dimen/_5sdp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <EditText
                    android:id="@+id/skillStudentEdit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_edt"
                    android:hint="@string/special_skils"
                    android:inputType="text"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/green_corner"
                android:onClick="onUpdateProfile"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />


        </LinearLayout>
    </ScrollView>


</layout>