<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rect"
    android:elevation="@dimen/_5sdp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/home_location"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp" />


    <TextView
        android:id="@+id/address_confirm_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_16sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/address_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/green_corner"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/address_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/green_corner"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

</LinearLayout>