<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="app.com.HungryEnglish.Activity.FeedbackActivity">

        <ImageView
            android:id="@+id/horizontal_logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_90sdp"
            android:src="@drawable/ic_login_icon" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInput_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/horizontal_logo"
            android:layout_marginTop="@dimen/_5sdp">

            <EditText
                android:id="@+id/feedback_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt"
                android:gravity="top|left"
                android:hint="@string/enter_description"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="6"
                android:padding="@dimen/_10sdp"
                android:scrollbars="vertical"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/activity_login_btn"
            style="@style/green_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtInput_feedback"
            android:layout_marginTop="@dimen/_15sdp"
            android:onClick="onFeedBack"
            android:text="@string/submit_en" />

        <TextView
            style="@style/small_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="bottom|center"
            android:onClick="onPrivacyClick"
            android:text="@string/right_reseved"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12sdp" />
    </RelativeLayout>

</layout>